--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@solana/web3.js": "^1.98.2",
+    "cors": "^2.8.5",
     "express": "^5.1.0"
   }
 }
